--- a/hyperacusis.html
+++ b/hyperacusis.html
@@ -80,7 +80,7 @@
   <p class="lead">
     The condition often follows acoustic trauma, prolonged noise exposure, otologic injury, or neurological dysfunction, and its severity can vary widely. 
     For many individuals, hyperacusis causes distress, anxiety, and social withdrawal as they attempt to avoid environments that provoke discomfort. 
-    Proper management focuses on <strong>protecting against harmful sound exposure</strong> while gradually reintroducing tolerable sounds in a controlled, stable environment to help restore auditory tolerance.
+    Proper management focuses on <strong>protecting against harmful sound exposure</strong> while <i>very gradually</i> reintroducing tolerable sounds in a controlled, stable environment to help restore auditory tolerance.
   </p>
 
   <p>
@@ -91,8 +91,12 @@
     
    <p>
 
-Hyperacusis is defined as an <strong>abnormal sensitivity to everyday sounds</strong>, in which normal environmental noises are perceived as uncomfortably loud, intrusive, or even painful. Noxacusis, by definition, refers to <strong>pain resulting from sound exposure that exceeds an individual’s tolerance level</strong>. In our experience, when hyperacusis becomes severe enough, pain nearly always develops as part of the condition ─ therefore, we see little reason to distinguish these two as separate disorders.
-<strong>Noxacusis is simply a more severe manifestation of hyperacusis, characterized by the presence of pain in response to sound</strong>.
+Noxacusis, by definition, refers to <strong>pain resulting from sound exposure that exceeds an individual’s tolerance level</strong>. In our experience, when hyperacusis becomes severe enough, <i>pain nearly always develops as part of the condition</i> ─ therefore, we see little reason to distinguish these two as separate disorders.
+<strong>Noxacusis is simply a more severe manifestation of hyperacusis, characterized by the presence of pain in response to sound</strong>. For some individuals, pain occurs immediately when sound exceeds their tolerance threshold, whereas others experience a delayed response in which the effects of sound exposure may not manifest until a day or two later.
+  </p>
+
+  <p>
+  <i>For consistency, we’ll continue using the term noxacusis on this website to refer to pain hyperacusis, but it’s important to note that we view it as a more severe form of hyperacusis, not a separate condition.</i>
   </p>
 
   <p>
@@ -102,12 +106,12 @@ Hyperacusis is defined as an <strong>abnormal sensitivity to everyday sounds</st
     is often absent, recovery from setbacks is quicker, and sound tolerance usually returns to baseline. 
     However, in severe cases, pain becomes a persistent feature, and any setback can cause a lasting 
     reduction in sound tolerance. Recovery in such cases tends to be slow and difficult, 
-    with some individuals experiencing setbacks that appear permanent or last for a year or longer.
+    with some individuals experiencing setbacks that seem permanent or last for a year or longer.
   </p>
 
   <p>
-  Another observation we have made is that some individuals develop sound sensitivity <strong>secondary to neuralgia-related pain</strong>, and this <i>should not be considered the same disorder as hyperacusis</i>. These patients often report a <strong>burning or aching sensation</strong> around the ear that can radiate to the face and head. While the pain or burning may make them unusually sensitive to sound, the mechanism differs from hyperacusis. In hyperacusis, discomfort or pain generally localizes to the middle ear (deep to the tympanic membrane), is often a sharp or stabbing pain, and occurs directly in response to sounds that exceed the individual’s tolerance threshold. 
-  Based on our observations, individuals with neuralgia-related pain are more likely to experience benefit from <a class="link" href="medications.html#clomipramine">clomipramine</a> than true hyperacusis patients. 
+  Another observation we have made is that some individuals develop sound sensitivity <strong>secondary to neuralgia-related pain</strong>, and this <i>should not be considered the same disorder as hyperacusis</i>. These patients often report a <strong>burning or aching sensation</strong> around the ear that can radiate to the face and head. While the pain or burning may make them unusually sensitive to sound, the mechanism differs from hyperacusis. In hyperacusis, <strong>pain occurs directly in response to sounds that exceed the individual’s tolerance threshold</strong> and is typically localized to the middle ear (deep to the tympanic membrane), and the pain is often described as sharp or stabbing in character. 
+  Based on our observations, individuals with neuralgia-related pain and sound sensitivity are more likely to show improvement from <a class="link" href="medications.html#clomipramine">clomipramine</a> than hyperacusis patients. 
   </p>
 
   <h2>Key Features of Hyperacusis</h2>
@@ -239,7 +243,7 @@ Hyperacusis is defined as an <strong>abnormal sensitivity to everyday sounds</st
       <li>Everyday sounds are perceived as uncomfortably loud or even physically painful.</li>
       <li>Involves abnormal auditory gain or nerve sensitivity.</li>
       <li>May involve structural changes in the middle ear (hypermobility of the ossicles).</li>
-      <li>Commonly associated with tinnitus (most commonly reactive tinnitus).</li>
+      <li>Frequently associated with tinnitus (often reactive tinnitus).</li>
       <li>Often follows acoustic trauma, prolonged noise exposure, otologic injury, or neurological dysfunction.</li>
       <li>LDL: Abnormally low. <i>Note that individuals with severe hyperacusis may be unable to tolerate an LDL test</i>.</li>
     </ul>
