--- a/mem.html
+++ b/mem.html
@@ -121,7 +121,7 @@
     </ul>
 
     <p>
-    An article describing acoustic shock and how it relates to the tensor tympani muscle (TTM) <a class="link" href="https://drive.google.com/file/d/1bS_f919kmbgbfTjBa-xfWXOXR60Q5-x1/view?pli=1" target="_blank" rel="noopener noreferrer">can be found here</a>. Key points within the article have been highlighted.
+    A 2019 article published by Noreña et al. describes acoustic shock and how it relates to the tensor tympani muscle (TTM) <a class="link" href="https://drive.google.com/file/d/1bS_f919kmbgbfTjBa-xfWXOXR60Q5-x1/view?pli=1" target="_blank" rel="noopener noreferrer">can be found here</a>. Key points within the article have been highlighted.
     </p>
 
       <p>
