--- a/silverstein.html
+++ b/silverstein.html
@@ -87,16 +87,27 @@
   </ul>
 
    <p class="lead">
-    The <a class="link" href="https://www.sciencedirect.com/science/article/pii/S0196070925000183" target="_blank" rel="noopener noreferrer">updated Silverstein Procedure</a> represents a refinement of the original approach. 
-    While the original procedure focused mainly on reinforcing the round and oval windows, 
-    the modern technique now reinforces the <strong> round and oval windows</strong> and 
-    includes the additional step of <strong>draping fascia around the ossicles</strong> ─ the tiny bones of the middle ear. 
+    The <a class="link" href="https://www.sciencedirect.com/science/article/pii/S0196070925000183" target="_blank" rel="noopener noreferrer">Enhanced Silverstein Procedure</a> represents a refinement of the original approach. 
+  While the original procedure focused mainly on reinforcing the round and oval windows, the modern technique now reinforces the <strong>round and oval windows</strong>, the <strong>tympanic membrane</strong>, and includes the additional step of <strong>draping fascia over the incus to further reinforce the oval window</strong>. The Enhanced Silverstein Procedure is carried out using the following steps:
     </p>
+    <ul>
+    <li>Ten 2 mm pieces of temporalis fascia are used to reinforce the oval window.</li>
+    <li>Oval window reinforcemnt is further enhanced by draping a 4 mm round piece of temporalis fascia over the incus.</li>
+    <li>Round window is reinforced with two 2 mm pieces and a 4 mm piece of temporalis fascia.</li>
+    <li>One 6 mm square piece of temporalis fascia is used to enhance the posterior half of the eardrum.</li>
+
+    <i>Note that some surgeons have opted to use tragal perichondrium instead of temporalis fascia for certain portions of the procedure, as it is slightly thicker and may further reduce sound transmission.</i>
+  
+    </ul>
     <p>
     This modification is based on emerging theories suggesting that <a class="link" href="https://www.sciencedirect.com/science/article/pii/S0196070918309803" target="_blank" rel="noopener noreferrer">hypermobility of the stapes</a> 
     (the smallest ossicle) may contribute to abnormal sound transmission and pain sensitivity in hyperacusis and noxacusis. 
     By stabilizing the ossicular chain and reducing excessive motion of the stapes, the updated procedure may offer 
     more comprehensive protection against sound-induced discomfort.
+  </p>
+
+  <p>
+         <img src="images/middle_ear.gif" class="full-width-image-silverstein">
   </p>
 
       <p>
