--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <h1>Precautionary Guide for New Hyperacusis Patients</h1>
 
       <p>
-        At <i>Hyperacusis Guide</i>, we strongly disagree with the widespread narrative that isolating from sound will worsen hyperacusis symptoms. Many new sufferers often turn to platforms like Reddit, where the majority of the advice they receive encourages continuous exposure to sound with the expectation that their symptoms will improve.
+        At <i>Hyperacusis Guide</i>, we strongly disagree with the widespread narrative that isolating from sound will worsen hyperacusis symptoms. Many new sufferers often turn to platforms like Reddit, where the majority of the advice they receive encourages continuous exposure to sound with the expectation that their symptoms will improve, and warns that avoiding or isolating from sound may cause their symptoms to worsen.
       </p>
 
       <p>
@@ -83,8 +83,8 @@
         This protocol offers cautionary guidance based on firsthand evidence that sound exposure can worsen symptoms, 
         and is designed to support recovery in the most effective way possible. Most individuals improve over time, 
         gradually discovering safe sound levels tailored to their sensitivities. Many eventually relax certain limitations 
-        once stability is achieved. We believe that extra caution early on preserves more freedom later, 
-        whereas insufficient caution early on can result in severe, long-term limitations.
+        once stability is achieved. 
+        We believe that exercising extra caution early on helps to preserve more freedom later, whereas insufficient caution at the outset can lead to severe, long-term limitations.
       </p>
 
       <p>
