--- a/hyperacusis.html
+++ b/hyperacusis.html
@@ -86,13 +86,13 @@
   <p>
     At <i>Hyperacusis Guide</i>, we have researched hundreds of patient cases and spent over a year 
     directly communicating with individuals suffering from hyperacusis, noxacusis (pain hyperacusis), and tinnitus to gather 
-    detailed information about their symptoms and experiences. Through this process, we observed that many individuals with hyperacusis, as well as researchers, tend to classify hyperacusis and noxacusis as distinct disorders. However, our findings suggest that these conditions likely exist along the same spectrum.
+    detailed information about their symptoms and experiences. Through this process, we observed that many individuals with hyperacusis, as well as researchers and clinicians, tend to classify hyperacusis and noxacusis as distinct disorders. However, our findings suggest that these conditions likely exist along the same spectrum.
     
     
    <p>
 
 Noxacusis, by definition, refers to <strong>pain resulting from sound exposure that exceeds an individual’s tolerance level</strong>. In our experience, when hyperacusis becomes severe enough, <i>pain nearly always develops as part of the condition</i> ─ therefore, we see little reason to distinguish these two as separate disorders.
-<strong>Noxacusis is simply a more severe manifestation of hyperacusis, characterized by the presence of pain in response to sound</strong>. For some individuals, pain occurs immediately when sound exceeds their tolerance threshold, whereas others experience a delayed response in which the effects of sound exposure may not manifest until a day or two later.
+In our opinion, <strong>noxacusis represents a more severe manifestation of hyperacusis, characterized by the presence of pain in response to sound, and not a separate condition</strong>. For some individuals, pain occurs immediately when sound exceeds their tolerance threshold, whereas others experience a delayed response in which the effects of sound exposure may not manifest until a day or two later. In either case, the pain may persist for weeks or even months and often fluctuates in intensity over time.
   </p>
 
   <p>
@@ -100,8 +100,8 @@ Noxacusis, by definition, refers to <strong>pain resulting from sound exposure t
   </p>
 
   <p>
-    The key features of hyperacusis include <strong>reduced sound tolerance, aural fullness, tinnitus 
-    (often reactive), and discomfort or pain in more advanced cases</strong>. These symptoms typically worsen after 
+    The key features of hyperacusis include <strong>reduced sound tolerance</strong>, <strong>tinnitus 
+    (often reactive)</strong>, and <strong>discomfort or pain in more advanced cases</strong>. When pain or discomfort is present, it is often accompanied by a sensation of <strong>aural fullness or pressure</strong>. These symptoms typically worsen after 
     exposure to sounds above the individual’s tolerance threshold. In the earlier and milder stages, pain 
     is often absent, recovery from setbacks is quicker, and sound tolerance usually returns to baseline. 
     However, in severe cases, pain becomes a persistent feature, and any setback can cause a lasting 
@@ -110,13 +110,14 @@ Noxacusis, by definition, refers to <strong>pain resulting from sound exposure t
   </p>
 
   <p>
-  Another observation we have made is that some individuals develop sound sensitivity <strong>secondary to neuralgia-related pain</strong>, and this <i>should not be considered the same disorder as hyperacusis</i>. These patients often report a <strong>burning or aching sensation</strong> around the ear that can radiate to the face and head. While the pain or burning may make them unusually sensitive to sound, the mechanism differs from hyperacusis. In hyperacusis, <strong>pain occurs directly in response to sounds that exceed the individual’s tolerance threshold</strong> and is typically localized to the middle ear (deep to the tympanic membrane), and the pain is often described as sharp or stabbing in character. 
-  Based on our observations, individuals with neuralgia-related pain and sound sensitivity are more likely to show improvement from <a class="link" href="medications.html#clomipramine">clomipramine</a> than hyperacusis patients. 
+  Another observation we have made is that some individuals develop sound sensitivity <strong>secondary to neuralgia-related pain</strong>, and this <i>should not be considered the same disorder as hyperacusis</i>. These patients often report a <strong>burning or aching sensation</strong> around the ear that can radiate to the face and head. While the pain or burning may make them unusually sensitive to sound, the mechanism differs from hyperacusis. In hyperacusis, <strong>pain occurs directly in response to sounds that exceed the individual’s tolerance threshold</strong>, is typically localized to the middle ear (deep to the tympanic membrane), and is often described as sharp or stabbing in character. 
+  Based on our observations, individuals with neuralgia-related pain and sound sensitivity are more likely to experience improvement with <a class="link" href="medications.html#clomipramine">clomipramine</a> than patients with hyperacusis.
   </p>
 
   <h2>Key Features of Hyperacusis</h2>
   <ul>
-    <li><strong>Reduced sound tolerance</strong>, <strong>aural fullness</strong>, <strong>tinnitus (often reactive)</strong>, and <strong>discomfort or pain</strong> in more advanced cases.</li>
+    <li><strong>Reduced sound tolerance</strong>, <strong>tinnitus (often reactive)</strong>, and <strong>discomfort or pain</strong> in more advanced cases. When pain or discomfort is present, it is often accompanied by a sensation of <strong>aural fullness or pressure</strong>. </li>
+    <li>Noxicusis (pain hyperacusis) is not a distinct condition, but rather a more severe manifestion of hyperacusis. 
     <li>Can lead to social withdrawal and isolation to avoid sound exposure. Severe cases are usually completely homebound.</li>
     <li>Severity varies ─ some individuals experience mild discomfort, while others have debilitating sound sensitivity.</li>
     <li>Often triggered by acoustic trauma, prolonged noise exposure, or neurological dysfunction.</li>
@@ -126,7 +127,8 @@ Noxacusis, by definition, refers to <strong>pain resulting from sound exposure t
   <div class="page-break" aria-hidden="true"></div>
       <h1>Hyperacusis Severity Scale</h1>
     <p>
-    At <i>Hyperacusis Guide</i>, we noted the lack of a standardized severity scale for hyperacusis.  To address this gap, we propose the following severity scale, intended to enable consistent classification, assist clinical management, and enhance the quality of data collected for research.
+    At <i>Hyperacusis Guide</i>, we noted the lack of a standardized severity grading system for hyperacusis.  To address this gap, we propose the following severity scale, intended to enable consistent classification, assist clinical management, and enhance the quality of data collected for research.
+    Note that pain is not included as a metric in this severity scale, as it is a subjective measure and may be reported inconsistently among individuals with hyperacusis.
     </p>
 
     <p>
