--- a/medications.html
+++ b/medications.html
@@ -65,25 +65,25 @@
       <h1>Medications</h1>
 
   <p class="lead">
-    Various medications have been explored for the management of hyperacusis, noxacusis (pain hyperacusis), middle ear myoclonus (MEM), and tonic tensor tympani syndrome (TTTS), though none have demonstrated consistent benefits. 
+    Various medications have been explored for the management of hyperacusis, noxacusis (pain hyperacusis), neuraliga-associated sound sensitivity, middle ear myoclonus (MEM), and tonic tensor tympani syndrome (TTTS), though none have demonstrated consistent benefits. 
     </p>
     <p>Some patients report temporary relief with benzodiazepines, such as clonazepam or diazepam, which can help calm neural hyperexcitability and reduce anxiety associated with sound sensitivity. 
-    However, due to their <strong>high potential for dependence and withdrawal</strong>, benzodiazepines should generally be avoided, with limited use reserved for specific circumstances such as travel. Long-term use of benzodiazepines may potentially worsen hyperacusis and tinnitus symptoms due to interdose withdrawal effects.
+    However, due to their <strong>high potential for dependence and withdrawal</strong>, benzodiazepines should generally be avoided, with limited use reserved for specific circumstances such as travel. Prolonged benzodiazepine use may exacerbate hyperacusis and tinnitus symptoms due to interdose withdrawal effects associated with dysregulation of the glutamatergic and GABAergic neurotransmitter systems.
   </p>
   <p>
-    Other medications, including tricyclic antidepressants, serotonin-norepinephrine reuptake inhibitors (SNRIs), and anticonvulsants have been tried with variable results.
+    Other medications, including tricyclic antidepressants (TCAs), serotonin-norepinephrine reuptake inhibitors (SNRIs), and anticonvulsants have been used with variable results.
     </p>
     <p>
        Ambroxol, a mucolytic drug with sodium channel–blocking and neuroprotective properties, has been reported 
-        by some patients to reduce pain symptoms in noxacusis, but the results are inconsistent. 
+        by some patients to reduce pain symptoms in noxacusis, but results remain inconsistent. 
     </p>
     <p>
-    Overall, pharmacologic approaches remain largely experimental, and treatment must be individualized and combined with a controlled sound environment to prevent further auditory injury.
+   Overall, pharmacologic treatments remain largely experimental and should be individualized for each patient. They should also be used in conjunction with a controlled sound environment to minimize further auditory injury.
     </p>
     <p>
-    Real-world data collected from patients who have tried a various treatments including antidepressants, ambroxol, Botox, and tympanic membrane paper patching can be found in the following spreadsheet ─
+    Real-world data collected from patients who have tried a various treatments including antidepressants, ambroxol, Botox, and tympanic membrane paper patching
 
-    <a class="link" href="https://docs.google.com/spreadsheets/d/1-ePvJPk4BhBeoOBKPc1gmXriXd4TYD7Z8n3yyEMoy5I/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Medication, Botox, and Paper Patching Spreadsheet</a>
+    <a class="link" href="https://docs.google.com/spreadsheets/d/1-ePvJPk4BhBeoOBKPc1gmXriXd4TYD7Z8n3yyEMoy5I/edit?usp=sharing" target="_blank" rel="noopener noreferrer">can be found in this spreadsheet</a>.
 
 
   </p>
@@ -94,7 +94,7 @@
 
   <ul>
     <li><strong>Benzodiazepines (clonazepam, diazepam):</strong> May temporarily reduce sound sensitivity, muscle spasms, and anxiety but carry an extremely high risk of dependence and withdrawal. <i><uL>Withdrawal from benzodiazepines can be extremely difficult, often requiring a gradual taper over many months. In some cases, individuals experience protracted withdrawals that may persist for years, underscoring the need for great caution when using or discontinuing these medications.</ul></i></li>
-    <li><strong>Tricyclic antidepressants (clomipramine, amitriptyline, nortriptyline):</strong> Clomipramine has become the most widely used medication for managing hyperacusis and noxacusis symptoms, and while it seems to be highly effective for some, many patients see minimal or no relief from their symptoms.</li>
+    <li><strong>Tricyclic antidepressants (clomipramine, amitriptyline, nortriptyline):</strong> Tend to provide greater symptom relief for individuals with neuralgia-associated pain and sound sensitivity than for those with primary hyperacusis.</li>
          <a id="clomipramine"></a>
     <li><strong>SNRIs (duloxetine):</strong> Explored for central pain modulation, variable effectiveness.</li>
     <li><strong>Anticonvulsants (gabapentin, pregabalin):</strong> May help neuropathic auditory pain, variable effectiveness.</li>
@@ -106,15 +106,15 @@
   </h2>
 
   <p>
-  Clomipramine warrants special mention as it has been the most widely used medication for managing hyperacusis and noxacusis symptoms. Among the various pharmacologic options explored, clomipramine has shown the most consistent anecdotal benefit in reducing auditory hypersensitivity and related anxiety.
+  Clomipramine, a tricyclic antidepressant (TCA), warrants special mention as it has become the most widely used medication for managing symptoms of hyperacusis and noxacusis, as well as sound sensitivity associated with neuralgia. Among the various pharmacologic options explored, clomipramine has shown the most consistent anecdotal benefit in reducing auditory hypersensitivity and related anxiety.
   </p>
   <p>
   Despite reports of success from many patients, a significant number experienced little to no improvement in their symptoms while using clomipramine. At <i>Hyperacusis Guide</i>, we have reviewed hundreds of patient cases and believe we have identified a specific subgroup that responds most favorably to clomipramine. These patients typically share the following characteristics:
   </p>
   <ul>
-      <li><strong>Hyperacusis symptoms are mild or absent:</strong> Patients are able to carry out normal daily activities, typically can continue working in a quiet job, and can tolerate normal environmental sounds without fear of a permanent setback, even if this requires the use of hearing protection.<i><ul>Based on our knowledge, no patients who are truly catastrophic and homebound have reported meaningful improvement in their symptoms after taking clomipramine.</ul></i></li>
+      <li><strong>Hyperacusis symptoms are mild or absent:</strong> Patients are able to carry out normal daily activities, can usually continue working a quiet job, and can tolerate normal environmental sounds without fear of a permanent setback, even if this requires the use of hearing protection. Aural fullness is typically very mild or absent in these patients.<i><ul>Based on our knowledge, no patients who are truly catastrophic and homebound have reported meaningful improvement in their symptoms after taking clomipramine.</ul></i></li>
       <li><strong>No permanent setbacks:</strong> Patients may have a temporary setback from exposing to sound above their tolerance threshold, but return to their previous baseline after a period of rest.</li>
-    <li><strong>Neuralgia-related pain:</strong> Almost all of these patients complain of neuralgia-related pain, frequently a burning sensation that radiates from around the ear into the face and head. </li>
+    <li><strong>Neuralgia-associated pain:</strong> Almost all of these patients complain of neuralgia-associated pain, frequently a burning sensation that radiates from around the ear into the face and head. </li>
 
   </ul>
   <p>
@@ -128,7 +128,7 @@
   <i>Some patients have reported fewer side effects and less pronounced changes in tinnitus when using the sustained-release formulation of clomipramine</i>.
   </p>
   <p>
-  Please refer to the <a class="link" href="https://docs.google.com/spreadsheets/d/1-ePvJPk4BhBeoOBKPc1gmXriXd4TYD7Z8n3yyEMoy5I/edit?usp=sharing" target="_blank" rel="noopener noreferrer">spreadsheet</a>, which provides detailed patient reports on clomipramine use, including information on dosage, effectiveness, and side effects.
+  <a class="link" href="https://docs.google.com/spreadsheets/d/1-ePvJPk4BhBeoOBKPc1gmXriXd4TYD7Z8n3yyEMoy5I/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Please refer to the spreadsheet</a>, which provides detailed patient reports on clomipramine use, including information on dosage, effectiveness, and side effects.
   </p>
       <div class="page-break" aria-hidden="true"></div>
       <h1>Botox</h1>
