--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
       <h1>Precautionary Guide for New Hyperacusis Patients</h1>
 
       <p>
-        At <i>Hyperacusis Guide</i>, we strongly disagree with the widespread narrative that isolating from sound will worsen hyperacusis symptoms. Many new sufferers often turn to platforms like Reddit, where the majority of the advice they receive encourages continuous exposure to sound with the expectation that their symptoms will improve, and warns that avoiding or isolating from sound may cause their symptoms to worsen.
+        At <i>Hyperacusis Guide</i>, we strongly disagree with the widespread narrative that isolating from sound will worsen hyperacusis symptoms. Many new hyperacusis sufferers turn to platforms like Reddit, where the majority of the advice they receive encourages continued exposure to everyday sounds with the expectation that their symptoms will improve, and warns that avoiding or isolating from sound may cause their symptoms to worsen. Sadly, this is usually the same advice new sufferers will receive from doctors and clinicians, who generally lack experience in managing hyperacusis.
       </p>
 
       <p>
-        However, our firsthand experience and case reviews suggest that even a mild case of hyperacusis can rapidly progress to a severe or catastrophic level if normal sound exposure is continued. We are aware of numerous individuals who were initially mildly affected, followed exposure therapy advice from Reddit and other sources, and subsequently became completely homebound, unable to work, and profoundly disabled by their condition. We believe that earlier sound isolation when symptoms are mild could have prevented this escalation in many cases.
+        Our firsthand experience and case reviews suggest that even a mild case of hyperacusis can rapidly progress to a severe or catastrophic level if normal sound exposure is continued. We are aware of numerous individuals who were initially mildly affected, followed exposure therapy advice from Reddit and other sources, and subsequently became completely homebound, unable to work, and profoundly disabled by their condition. We believe that earlier sound isolation when symptoms are mild could have prevented this escalation in many cases.
       </p>
 
       <h2>Purpose</h2>
@@ -84,11 +84,11 @@
         and is designed to support recovery in the most effective way possible. Most individuals improve over time, 
         gradually discovering safe sound levels tailored to their sensitivities. Many eventually relax certain limitations 
         once stability is achieved. 
-        We believe that exercising extra caution early on helps to preserve more freedom later, whereas insufficient caution at the outset can lead to severe, long-term limitations.
+        We believe that taking extra precautions early on helps to preserve more freedom later, while insufficient caution early on can result in severe, long-term limitations.
       </p>
 
       <p>
-        <strong><i>Know your limits and do not risk exposure beyond them.</i></strong> Symptom worsening from overexposure can be difficult 
+        <strong><i>Know your limits and do not risk exposure beyond them</i></strong>. Symptom worsening from overexposure can be difficult 
         to recover from, and in some cases may lead to long-term or seemingly permanent symptoms.
       </p>
 
