--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <h1>Precautionary Guide for New Hyperacusis Patients</h1>
 
       <p>
-        At <i>Hyperacusis Guide</i>, we strongly disagree with the widespread narrative that isolating from sound will worsen hyperacusis symptoms. Many new hyperacusis sufferers turn to platforms like Reddit, where the majority of the advice they receive encourages continued exposure to everyday sounds with the expectation that their symptoms will improve, and warns that avoiding or isolating from sound may cause their symptoms to worsen. Sadly, this is usually the same advice new sufferers will receive from doctors and clinicians, who generally lack experience in managing hyperacusis.
+        At <i>Hyperacusis Guide</i>, we strongly disagree with the widespread narrative that isolating from sound will worsen hyperacusis symptoms. Many new hyperacusis sufferers turn to platforms like Reddit, where the majority of the advice they receive encourages continued exposure to everyday sounds with the expectation that their symptoms will improve, and warns that avoiding or isolating from sound may cause their symptoms to worsen. Sadly, this is usually the same advice newly affected patients will receive from doctors, audiologists, and clinicians, who generally lack experience in managing hyperacusis.
       </p>
 
       <p>
@@ -84,11 +84,11 @@
         and is designed to support recovery in the most effective way possible. Most individuals improve over time, 
         gradually discovering safe sound levels tailored to their sensitivities. Many eventually relax certain limitations 
         once stability is achieved. 
-        We believe that taking extra precautions early on helps to preserve more freedom later, while insufficient caution early on can result in severe, long-term limitations.
+        We believe that taking extra precautions early on helps to preserve the potential for improvement later, whereas insufficient caution early on can result in severe, long-term limitations.
       </p>
 
       <p>
-        <strong><i>Know your limits and do not risk exposure beyond them</i></strong>. Symptom worsening from overexposure can be difficult 
+        <strong><i>Know your limits and do not risk exposure beyond them.</i></strong> Symptom worsening from overexposure can be difficult 
         to recover from, and in some cases may lead to long-term or seemingly permanent symptoms.
       </p>
 
@@ -105,15 +105,15 @@
         related conditions remain poorly understood. Many individuals with severe symptoms report wishing they had adopted 
         these precautions earlier. Taking careful measures early on is far more preferable than enduring irreversible consequences later.
       </p>
-
-      <h2>1. Controlled, Predictable Sound Environment</h2>
+      <ol>
+      <li class="numbered">Controlled, Predictable Sound Environment</li>
       <ul>
         <li>Create a quiet home environment where sound levels are predictable and consistently below your discomfort threshold.</li>
         <li>Eliminate sudden, unpredictable noises (door slams, kitchen clatter, TV/radio, etc.).</li>
         <li>Avoid any sound that causes pain, burning, flare-ups, or worsening of symptoms, even if it is not "loud" by normal standards.</li>
       </ul>
 
-      <h2>2. Protective Equipment Use</h2>
+      <li class="numbered">Protective Equipment Use</li>
       <ul>
         <li>If outside of your safe home environment (especially when driving or riding in a vehicle):</li>
         <ul>
@@ -124,7 +124,7 @@
         </ul>
       </ul>
 
-      <h2>3. Digital Audio Elimination</h2>
+      <li class="numbered">Digital Audio Elimination</li>
       <ul>
         <li>Zero digital audio exposure:</li>
         <ul>
@@ -134,7 +134,7 @@
         </ul>
       </ul>
 
-      <h2>4. Homebound Voluntary Precaution</h2>
+      <li class="numbered">Homebound Voluntary Precaution</li>
       <ul>
         <li>Minimize leaving home except for essential medical visits. <i>This precaution may be temporary but is important in the early phase to prevent irreversible setbacks.</i></li>
 
@@ -142,7 +142,7 @@
         <li>This will likely require you to stop working, at least temporarily, but it’s far better to take a planned break now than to risk worsening your condition and being forced to stop working due to an irreversible setback.</li>
       </ul>
 
-      <h2>5. Diagnostic Imaging</h2>
+      <li class="numbered">Diagnostic Imaging</li>
       <ul>
         <li>Schedule a high-resolution CT scan of the temporal bones (thin-cut protocol with &lt;= 0.6 mm slice thickness, non-contrast).</li>
     
@@ -152,7 +152,7 @@
         <i>High-resolution temporal bone CT is a very common study and nearly every hospital and imaging center has a standardized protocol for this exam. Any ENT specialist should be able to order this exam, however, after the imaging is completed you will likely need to find, or be referred to, a highly-specialized ENT (otolaryngologist) or neurotologist with experience treating hyperacusis ─ ideally with expertise in the Silverstein Procedure.</i>
       </ul>
 
-      <h2>6. Specialist Review</h2>
+      <li class="numbered">Specialist Review</li>
       <ul>
         <li>Review CT results with a competent ENT, otologist, or neurologist experienced in:</li>
         <ul>
@@ -165,19 +165,19 @@
         <p><i>It is important to approach medical appointments with realistic expectations. Most healthcare providers are unfamiliar with hyperacusis and noxacusis (pain hyperacusis), and even fewer understand how to manage these conditions effectively. If you visit a random ENT specialist, they will likely not be aware of the Silverstein Procedure or TVP Botox and may minimize your concerns. You should prioritize finding a <a class="link" href="silverstein.html#silverstein" target="_blank" rel="noopener noreferrer"> specialist with expertise in the Silverstein Procedure</a>, and some of them provide the option of virtual appointments.</p><p> As for audiologists, their role is usually limited to conducting a basic hearing test and, in some cases, recommending tinnitus retraining therapy (TRT), which is generally ineffective and likely harmful for those with severe sound intolerance.</i></p>
       </ul>
 
-      <h2>7. Treatment Planning</h2>
+      <li class="numbered">Treatment Planning</li>
       <ul>
         <li>Discuss possible interventions after imaging.</li>
         <li>Ensure the provider can perform, or refer for, all above options if indicated.</li>
       </ul>
 
-      <h2>8. Time & Preparedness</h2>
+      <li class="numbered">Time & Preparedness</li>
       <ul>
         <li>Improvement often takes time and varies by individual.</li>
         <li>Securing useful medical interventions early and having them available as options is wise, so you are prepared if you decide you need them. If you wait until you are severe it may become very difficult to access the tests and appointments.</li>
       </ul>
 
-      <h2>9. Medication Caution</h2>
+      <li class="numbered">Medication Caution</li>
       <ul>
         <li>Avoid psychiatric medications unless absolutely necessary for safety or mental health crisis.</li>
         <li>Many psychiatric meds can affect auditory processing and may complicate recovery.</li>
@@ -186,7 +186,7 @@
         <li>If any psychiatric meds are used, they should be short-term.</li>
       </ul>
 
-      <h2>10. Lifestyle & Mental Health Support</h2>
+      <li class="numbered">Lifestyle & Mental Health Support</li>
       <ul>
         <li>Consider incorporating activities that promote calmness and overall wellness, such as:</li>
         <ul>
@@ -201,7 +201,7 @@
         <i>These are suggestions ─ find what works best for your body and mind.</i>
       </ul>
 
-      <h2>11. General Precautions</h2>
+      <li class="numbered">General Precautions</li>
       <ul>
         <li>Avoid trial-and-error sound therapy. You will get plenty of sound enrichment even in your quiet home. Sound is everywhere.</li>
         <li>Rest, adequate sleep, and stress management are essential.</li>
@@ -214,7 +214,7 @@
         </ul>
       </ul>
 
-      <h2>12. Workplace & Disability Accommodations</h2>
+      <li class="numbered">Workplace & Disability Accommodations</li>
       <ul>
         <li>Explore available options such as:</li>
         <ul>
@@ -226,6 +226,7 @@
           <i>Utilizing these resources early can help reduce stress and support you financially.</i>
           <i>Regardless of what some may say, hyperacusis is a disability and presents many limitations in life and work.</i>
       </ul>
+    </ol>
     </article>
 <a href="#top" class="back-to-top" aria-label="Back to top"></a>
   </main>
