--- a/hyperacusis.html
+++ b/hyperacusis.html
@@ -111,13 +111,13 @@ In our opinion, <strong>noxacusis represents a more severe manifestation of hype
 
   <p>
   Another observation we have made is that some individuals develop sound sensitivity <strong>secondary to neuralgia-related pain</strong>, and this <i>should not be considered the same disorder as hyperacusis</i>. These patients often report a <strong>burning or aching sensation</strong> around the ear that can radiate to the face and head. While the pain or burning may make them unusually sensitive to sound, the mechanism differs from hyperacusis. In hyperacusis, <strong>pain occurs directly in response to sounds that exceed the individual’s tolerance threshold</strong>, is typically localized to the middle ear (deep to the tympanic membrane), and is often described as sharp or stabbing in character. 
-  Based on our observations, individuals with neuralgia-related pain and sound sensitivity are more likely to experience improvement with <a class="link" href="medications.html#clomipramine">clomipramine</a> than patients with hyperacusis.
+  <i>Based on our observations, individuals with neuralgia-related pain and sound sensitivity are more likely to experience improvement with <a class="link" href="medications.html#clomipramine">clomipramine</a> than patients with primary hyperacusis.</i>
   </p>
 
   <h2>Key Features of Hyperacusis</h2>
   <ul>
     <li><strong>Reduced sound tolerance</strong>, <strong>tinnitus (often reactive)</strong>, and <strong>discomfort or pain</strong> in more advanced cases. When pain or discomfort is present, it is often accompanied by a sensation of <strong>aural fullness or pressure</strong>. </li>
-    <li>Noxicusis (pain hyperacusis) is not a distinct condition, but rather a more severe manifestion of hyperacusis. 
+    <li>Noxicusis (pain hyperacusis) is likely not a distinct condition, but rather a more severe manifestion of hyperacusis. 
     <li>Can lead to social withdrawal and isolation to avoid sound exposure. Severe cases are usually completely homebound.</li>
     <li>Severity varies ─ some individuals experience mild discomfort, while others have debilitating sound sensitivity.</li>
     <li>Often triggered by acoustic trauma, prolonged noise exposure, or neurological dysfunction.</li>
