--- a/medications.html
+++ b/medications.html
@@ -94,7 +94,7 @@
 
   <ul>
     <li><strong>Benzodiazepines (clonazepam, diazepam):</strong> May temporarily reduce sound sensitivity, muscle spasms, and anxiety but carry an extremely high risk of dependence and withdrawal. <i><uL>Withdrawal from benzodiazepines can be extremely difficult, often requiring a gradual taper over many months. In some cases, individuals experience protracted withdrawals that may persist for years, underscoring the need for great caution when using or discontinuing these medications.</ul></i></li>
-    <li><strong>Tricyclic antidepressants (clomipramine, amitriptyline, nortriptyline):</strong> Tend to provide greater symptom relief for individuals with neuralgia-associated pain and sound sensitivity than for those with primary hyperacusis.</li>
+    <li><strong>Tricyclic antidepressants (clomipramine, amitriptyline, nortriptyline):</strong> Appear to provide greater symptom relief for individuals with neuralgia-associated pain and sound sensitivity than for those with primary hyperacusis.</li>
          <a id="clomipramine"></a>
     <li><strong>SNRIs (duloxetine):</strong> Explored for central pain modulation, variable effectiveness.</li>
     <li><strong>Anticonvulsants (gabapentin, pregabalin):</strong> May help neuropathic auditory pain, variable effectiveness.</li>
