--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ephesis&display=swap" rel="stylesheet">
 </head>
 <body>
   <a id="top"></a> 
@@ -63,6 +67,9 @@
 
   <main>
     <article>
+
+        <div class="centered-text"><span class="custom-font"><i>First, do no harm</i></span><br><span class="thomas">- Hippocrates</span></div>
+
       <h1>Precautionary Guide for New Hyperacusis Patients</h1>
 
       <p>
@@ -70,8 +77,10 @@
       </p>
 
       <p>
-        Our firsthand experience and case reviews suggest that even a mild case of hyperacusis can rapidly progress to a severe or catastrophic level if normal sound exposure is continued. We are aware of numerous individuals who were initially mildly affected, followed exposure therapy advice from Reddit and other sources, and subsequently became completely homebound, unable to work, and profoundly disabled by their condition. We believe that earlier sound isolation when symptoms are mild could have prevented this escalation in many cases.
+        Our firsthand experience and case reviews suggest that even a mild case of hyperacusis can rapidly progress to a severe or catastrophic level if normal sound exposure is continued. We are aware of numerous individuals who were initially mildly affected, followed exposure therapy advice from Reddit and other sources, and subsequently became completely homebound, unable to work, and profoundly disabled by their condition. We believe that earlier sound isolation when symptoms were mild could have prevented this escalation in many cases.
       </p>
+
+
 
       <h2>Purpose</h2>
       <p>
